--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>toy of 7k8m</title>
 </head>
 <body>
-	<h1>Hello, world.</h1>
+	<h1>Hello, world !</h1>
 	<p>This is toy server of 7k8m.</p>
 	<svg
 	   xmlns:dc="http://purl.org/dc/elements/1.1/"
