Added some of text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <body>
 	<h1>Hello, world !</h1>
 	<p>This is toy server of 7k8m.</p>
+	<h1>Contents</h1>	
+	<p><a href="/mikekiji_pict/">MikeKiji Pict</a></p>
+	<h1>Scribble</h1>
+	<p>
 	<svg
 	   xmlns:dc="http://purl.org/dc/elements/1.1/"
 	   xmlns:cc="http://creativecommons.org/ns#"
@@ -116,6 +120,7 @@
 			 points="23.527604,4.9413915 23.527604,36.859828 5.8359189,45.376275 5.8359189,23.535567 " />
 		</g>
 	  </g>
-	</svg>	
+	</svg>
+	</p>
 </body>
 </head>
