--- a/index.html
+++ b/index.html
@@ -123,5 +123,15 @@
 	  </g>
 	</svg>
 	</p>
+        <script type='text/javascript' src='bug-min.js'></script>
+        <script type='text/javascript'>
+            // default fruit fly bug:
+            new BugController({
+            });
+
+            // default spiders:
+            new SpiderController({
+            });
+        </script>
 </body>
 </head>
