--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <html>
 <head>
 	<title>toy of 7k8m</title>
+	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="main.css"/>
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+   crossorigin=""/>
+ 	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script>
+
 </head>
 <body>
 	<h1>Hello, world !</h1>
 	<p>This is toy server of 7k8m.</p>
 	<h1>Contents</h1>	
 	<p><a href="/mikekiji_pict/">MikeKiji Pict</a></p>
+	<h1>Map</h1>
+	<div id="mapid"></div>
+	<script type="text/javascript">
+	 var map = L.map('mapid').setView([35.466677, 139.623393], 15);
+	 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+     attribution: '&amp;copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+ 	 }).addTo(map);	 
+	</script>	
 	<h1>Scribble <svg class="icon icon-pencil"><use xlink:href="#icon-pencil"></use></svg></h1>
 	<p>
 	<figure>
