--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script type="text/javascript">
 	 var map = L.map('mapid').setView([35.466677, 139.623393], 15);
 	 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-     attribution: '&amp;copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+     attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
  	 }).addTo(map);	 
 	</script>	
 	<h1>Scribble <svg class="icon icon-pencil"><use xlink:href="#icon-pencil"></use></svg></h1>
