--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>toy of 7k8m</title>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="main.css"/>
+	<link rel="stylesheet" href="main.css?update=20210603"/>
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
    crossorigin=""/>
